analysis: Fix source code compatibility with Java 11
Commit 5ea491c72293cd5b253f59214f6537c6b787fcfc uses an API that doesn't
exist in Java 11.

Change-Id: Ic7ce90b9aaf704c5aed057557dbec7c22856eb0c
Signed-off-by: Bernd Hufmann <bernd.hufmann@ericsson.com>
Reviewed-on: https://git.eclipse.org/r/c/tracecompass/org.eclipse.tracecompass/+/204652
Tested-by: Trace Compass Bot <tracecompass-bot@eclipse.org>
Tested-by: Matthew Khouzam <matthew.khouzam@ericsson.com>
Reviewed-by: Matthew Khouzam <matthew.khouzam@ericsson.com>